--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -137,12 +137,12 @@
 \subsubsection*{第五日}
 
 % And God said, “Let the waters teem with living creatures, and let birds fly above the earth in the open expanse of the sky.”
-\N 而上帝说，“让诸水以生灵充盈，并让鸟类飞翔大地之上在天空开阔的穹苍中。”
+\N 而上帝说，“让诸水以生灵充盈，并让雀鸟飞翔大地之上在天空开阔的穹苍中。”
 % So God created the great sea creatures and every living thing that moves, with which the waters teemed according to their kinds, and every winged bird after its kind. And God saw that it was good.
 \N 所以上帝创造了巨大的海洋生物和每个活动的活物，诸水以它们充盈各从其类，并创造了每个翼鸟，各从其类。而上帝见它是善的。
 
 % Then God blessed them and said, “Be fruitful and multiply and fill the waters of the seas, and let birds multiply on the earth.”
-\N 于是上帝祝福它们并说，“要富有果实、倍增并充满海洋的诸水，并让鸟类在地上倍增。”
+\N 于是上帝祝福它们并说，“要富有果实、倍增并充满海洋的诸水，并让雀鸟在地上倍增。”
 
 % And there was evening, and there was morning—the fifth day.
 \N 然后有夜晚，又有早晨---这是第五日。
@@ -234,7 +234,7 @@
 % And out of the ground the LORD God formed every beast of the field and every bird of the air, and He brought them to the man to see what he would name each one. And whatever the man called each living creature, that was its name.
 \N 而耶和华上帝以土壤塑造了田野中每一只走兽和空中每一只鸟，而祂将它们带给那人而看他会给各个取什么名。而无论那人称呼各个生灵什么，那就是它的名字。
 % The man gave names to all the livestock, to the birds of the air, and to every beast of the field. But for Adame no suitable helper was found.
-\N 那人将名字给所有牲畜、空中的鸟类，并给田野的每个走兽。但对亚当没有适合的帮手被找到。
+\N 那人将名字给所有牲畜、空中的雀鸟，并给田野的每个走兽。但对亚当没有适合的帮手被找到。
 
 % So the LORD God caused the man to fall into a deep sleep, and while he slept, He took one of the man’s ribs and closed up the area with flesh. 
 \N 所以耶和华上帝令那人陷入沉睡，而在他睡着时，祂取了那人的一根肋骨并以肉将那地方闭合。
@@ -603,7 +603,7 @@
 % And you are to bring two of every living creature into the ark—male and female—to keep them alive with you.
 \N 而你要将每一生灵带两个进入方舟---公的和母的---使它们与你一起保留性命。
 % Two of every kind of bird and animal and crawling creature will come to you to be kept alive. 
-\N 每种鸟类、动物和爬行生物的两个会到你这里来以被保留性命。
+\N 每种雀鸟、动物和爬行生物的两个会到你这里来以被保留性命。
 % You are also to take for yourself every kind of food that is eaten and gather it as food for yourselves and for the animals.”
 \N 你也要为你自己取每种吃的食物，为你并为这些动物将它作为食物收集。”
 
@@ -621,7 +621,7 @@
 % You are to take with you seven pairs of every kind of clean animal, a male and its mate; a pair of every kind of unclean animal, a male and its mate;
 \N 你要取每种洁净动物七对与你一起，一个公的和它的配偶；每种不洁动物一对，一个公的和它的配偶；
 % and seven pairs of every kind of bird of the air, male and female, to preserve their offspring on the face of all the earth.
-\N 和每种空中的鸟类七对，公的和母的，以在全地表上保守它们的幼崽。
+\N 和每种空中的雀鸟七对，公的和母的，以在全地表上保守它们的幼崽。
 % For seven days from now I will send rain on the earth for forty days and forty nights, and I will wipe from the face of the earth every living thing I have made.”
 \N 因为从现在起七天后我会送雨到地上四十天和四十夜，而我会从地表擦除我已造的每个活物。”
 
@@ -633,7 +633,7 @@
 % And Noah and his wife, with his sons and their wives, entered the ark to escape the waters of the flood.
 \N 而挪亚和他的妻子，与他的儿子和他们的妻子一起，进入方舟以逃脱洪灾之水。
 % The clean and unclean animals, the birds, and everything that crawls along the ground 
-\N 洁净的和不洁的动物、鸟类、及沿地面爬行的一切
+\N 洁净的和不洁的动物、雀鸟、及沿地面爬行的一切
 % came to Noah to enter the ark, two by two, male and female, as God had commanded Noah.
 \N 来到挪亚这里进入方舟，两两成对，公的和母的，如上帝已命令挪亚的。
 
@@ -647,7 +647,7 @@
 % On that very day Noah entered the ark, along with his sons Shem, Ham, and Japheth, and his wife, and the three wives of his sons—
 \N 正是在那天挪亚进入方舟，与他的儿子闪、含和雅弗，和他的妻子，以及他儿子们的三位妻子一道---
 % they and every kind of wild animal, livestock, crawling creature, bird, and winged creature.
-\N 他们和每一种野兽，牲畜，爬行生物，鸟类，和有翼生物。
+\N 他们和每一种野兽，牲畜，爬行生物，雀鸟，和有翼生物。
 % They came to Noah to enter the ark, two by two of every creature with the breath of life.
 \N 它们到挪亚这里进入方舟，每个有生命气息的生物两两成对。
 % And they entered, the male and female of every living thing, as God had commanded Noah. Then the LORD shut him in.
@@ -663,11 +663,11 @@
 % The waters rose and covered the mountaintops to a depth of fifteen cubits.
 \N 诸水升起并覆盖山顶达十五肘尺的深度。
 % And every living thing that moved upon the earth perished—birds, livestock, animals, every creature that swarms upon the earth, and all mankind.
-\N 而每个在地上活动的活物都灭亡了---鸟类、牲畜、动物、每个在地上成群的生物，以及所有人类。
+\N 而每个在地上活动的活物都灭亡了---雀鸟、牲畜、动物、每个在地上成群的生物，以及所有人类。
 % Of all that was on dry land, everything that had the breath of life in its nostrils died. 
 \N 所有之中在旱地上的，一切在其鼻孔有生命气息都死了。
 % And every living thing on the face of the earth was destroyed—man and livestock, crawling creatures and birds of the air; they were blotted out from the earth, and only Noah and those with him in the ark remained.
-\N 而每个在地表的活物都被摧毁---人和牲畜、爬行生物和空中的鸟类；他们从地上被抹去，而只有挪亚和在方舟中与他一起的那些留存。
+\N 而每个在地表的活物都被摧毁---人和牲畜、爬行生物和空中的雀鸟；他们从地上被抹去，而只有挪亚和在方舟中与他一起的那些留存。
 
 % And the waters prevailed upon the earth for 150 days.
 \N 而诸水在地上泛滥150日。
@@ -724,18 +724,18 @@
 % “Come out of the ark, you and your wife, along with your sons and their wives.
 \N “你和你的妻子，与你的儿子们和他们的妻子一道，从方舟出来。
 % Bring out all the living creatures that are with you—birds, livestock, and everything that crawls upon the ground—so that they can spread out over the earth and be fruitful and multiply upon it.”
-\N 将所有与你一起的生物带出---鸟类、牲畜和在地面爬行的一切---以使它们能在大地之上扩散，富有果实并在其上倍增。”
+\N 将所有与你一起的生物带出---雀鸟、牲畜和在地面爬行的一切---以使它们能在大地之上扩散，富有果实并在其上倍增。”
 
 % So Noah came out, along with his sons and his wife and his sons’ wives.
 \N 所以挪亚出来，与他的儿子们和他的妻子以及他儿子的妻子们一道。
 % Every living creature, every creeping thing, and every bird—everything that moves upon the earth—came out of the ark, kind by kind.
-\N 每一种生灵、每一种伏行物，和每一种鸟类---在地上活动的一切---逐类从方舟出来。
+\N 每一种生灵、每一种伏行物，和每一种雀鸟---在地上活动的一切---逐类从方舟出来。
 
 % Noah Builds an Altar
 \subsection*{挪亚建造祭坛}
 
 % Then Noah built an altar to the LORD. And taking from every kind of clean animal and clean bird, he offered burnt offerings on the altar.
-\N 然后挪亚为耶和华建造了一座祭坛。而取自每类洁净的动物和洁净的鸟类，他在祭坛上奉上燔祭。
+\N 然后挪亚为耶和华建造了一座祭坛。而取自每类洁净的动物和洁净的雀鸟，他在祭坛上奉上燔祭。
 % When the LORD smelled the pleasing aroma, He said in His heart, “Never again will I curse the ground because of man, even though every inclination of his heart is evil from his youth. And never again will I destroy all living creatures as I have done.
 \N 当耶和华闻到这愉悦的芬芳，祂在祂心里说，“我绝不会再次因为人而咒诅地面，即使他内心的每个倾向从他青年起就是邪恶的。而我绝不会再次如我已做的那样摧毁所有生灵。
 
@@ -759,7 +759,7 @@
 % And God blessed Noah and his sons and said to them, “Be fruitful and multiply and fill the earth.
 \N 而上帝祝福挪亚和他的儿子们并对他们说，“要富有果实、倍增并充满大地。
 % The fear and dread of you will fall on every living creature on the earth, every bird of the air, every creature that crawls on the ground, and all the fish of the sea. They are delivered into your hand.
-\N 对你们的害怕与恐惧会降到地上每个生灵，空中的每个鸟类，地面上爬行的每个生物，以及海里的所有鱼上。它们被交付到你们手中。
+\N 对你们的害怕与恐惧会降到地上每个生灵，空中的每个雀鸟，地面上爬行的每个生物，以及海里的所有鱼上。它们被交付到你们手中。
 % Everything that lives and moves will be food for you; just as I gave you the green plants, I now give you all things.
 \N 活着的和活动的一切会作为你们的食物；正如我赐给你们绿植，我现在将万物赐给你们。
 % But you must not eat meat with its lifeblood still in it.
@@ -781,7 +781,7 @@
 % “Behold, I now establish My covenant with you and your descendants after you,
 \N “看啊，我现在确立我的圣约与你和你之后的后代，
 % and with every living creature that was with you—the birds, the livestock, and every beast of the earth—every living thing that came out of the ark.
-\N 以及与每个与你一起的生灵---鸟类、牲畜和地上每个走兽---每个从方舟出来的活物。
+\N 以及与每个与你一起的生灵---雀鸟、牲畜和地上每个走兽---每个从方舟出来的活物。
 % And I establish My covenant with you: Never again will all life be cut off by the waters of a flood; never again will there be a flood to destroy the earth.”
 \N 而我与你确立我的圣约：所有生命绝不会再次被洪灾的诸水剪除；绝不会再次有洪灾摧毁大地。”
 
@@ -1064,7 +1064,7 @@
 \N 但撒莱不育；她没有子女。
 
 % And Terah took his son Abram, his grandson Lot son of Haran, and his daughter-in-law Sarai the wife of Abram, and they set out from Ur of the Chaldeans for the land of Canaan. But when they arrived in Haran, they settled there.
-\N 而他拉带了他儿子亚伯兰、他的孙子、哈兰的儿子罗得，和他的儿媳、亚伯兰的妻子撒莱，而他们从迦勒底动身到迦南之地。但当他们抵达哈兰，他们在那里安家。
+\N 而他拉带了他儿子亚伯兰、他的孙子、哈兰的儿子罗得，和他的儿媳、亚伯兰的妻子撒莱，而他们从迦勒底的吾珥动身到迦南之地。但当他们抵达哈兰，他们在那里安家。
 % Terah lived 205 years, and he died in Haran.
 \N 他拉活了205年，而他死在了哈兰。
 
@@ -1098,7 +1098,7 @@
 \N 亚伯兰穿越那陆地远至在示剑摩利橡树的地点。而在那时迦南人在那陆地了。
 
 % Then the LORD appeared to Abram and said, “I will give this land to your offspring.” So Abram built an altar there to the LORD, who had appeared to him.
-\N 然后耶和华向亚伯兰显现并说，“我会将这块土地赐给你的孩子。”所以亚伯兰在那里为已向他显现的耶和华建造了一座祭坛。
+\N 然后耶和华向亚伯兰显现并说，“我会将这块土地赐给你的后嗣。”所以亚伯兰在那里为已向他显现的耶和华建造了一座祭坛。
 
 % From there Abram moved on to the hill country east of Bethel and pitched his tent, with Bethel to the west and Ai to the east. There he built an altar to the LORD, and he called on the name of the LORD.
 \N 从那里亚伯兰继续移动到伯特利东边的山地并搭起他的帐篷，伯特利在西边，艾在东边。在那里他为耶和华建造了一座祭坛，而他求靠耶和华的名。
@@ -1182,10 +1182,10 @@
 % After Lot had departed, the LORD said to Abram, “Now lift up your eyes from the place where you are, and look to the north and south and east and west, 
 \N 在罗得已离去后，耶和华对亚伯兰说，“现在从你所在的地方举目，并看向北边、南边、东边和西边，
 % for all the land that you see, I will give to you and your offspring forever.
-\N 因为你看见的所有土地，我会永远赐给你和你的孩子。
+\N 因为你看见的所有土地，我会永远赐给你和你的后嗣。
 
 % I will make your offspring like the dust of the earth, so that if one could count the dust of the earth, then your offspring could be counted.
-\N 我会使你的孩子像地上的尘土，以致如果有人能数算地上的尘土，那么你的孩子也能被数算。
+\N 我会使你的后嗣像地上的尘土，以致如果有人能数算地上的尘土，那么你的后嗣也能被数算。
 % Get up and walk around the land, through its length and breadth, for I will give it to you.”
 \N 起身并纵横巡游这土地，因为我会将它赐给你。”
 
@@ -1241,8 +1241,99 @@
 % He retrieved all the goods, as well as his relative Lot and his possessions, together with the women and the rest of the people.
 \N 他寻回了所有物品，还有他的亲戚罗得和他的财产，连同女人和剩余的民众。
 
+% Melchizedek Blesses Abram
+\subsection*{麦基洗德祝福亚伯兰}
 
+% After Abram returned from defeating Chedorlaomer and the kings allied with him, the king of Sodom went out to meet him in the Valley of Shaveh (that is, the King’s Valley).
+\N 在亚伯兰从击败基大老玛和与他联盟的诸王返回之后，索多玛王出来在沙微谷（那就是国王谷）会见他。
 
+% Then Melchizedek king of Salem brought out bread and wine—since he was priest of God Most High—
+\N 那时撒冷王麦基洗德拿出饼和酒---因为他是上帝至高者的祭司---
+% and he blessed Abram and said:
+\N 而他祝福亚伯兰并说：
+
+% “Blessed be Abram by God Most High, Creator of heaven and earth,
+“上帝至高者、天与地的造物主祝福亚伯兰，
+
+% and blessed be God Most High, who has delivered your enemies into your hand.”
+\N 而上帝至高者是当受崇拜的，祂已将你的敌人们交到你手中。”
+
+% Then Abram gave Melchizedek a tenth of everything.
+于是亚伯兰将一切的什一给了麦基洗德。
+
+% The king of Sodom said to Abram, “Give me the people, but take the goods for yourself.”
+\N 索多玛王对亚伯兰说，“将民众给我，而物品你自己拿去。”
+
+% But Abram replied to the king of Sodom, “I have raised my hand to the LORD God Most High, Creator of heaven and earth,
+\N 但亚伯兰回复索多玛王，“我已向耶和华至高者、天和地的造物主举手，
+% that I will not accept even a thread, or a strap of a sandal, or anything that belongs to you, lest you should say, ‘I have made Abram rich.’
+\N 我连一根线、一条鞋带、或属于你的任何东西都不会接受，免得你会说，‘我已使亚伯兰富有。’
+% I will accept nothing but what my men have eaten and the share for the men who went with me—Aner, Eshcol, and Mamre. They may take their portion.”
+\N 我什么都不会接受，除了我的人已吃的和跟我一起的人---亚乃、以实各和幔利的份额。让他们拿他们的部分。”
+
+% Genesis 15
+\section{第十五章}
+
+% God’s Covenant with Abram
+\subsection*{上帝与亚伯兰的圣约}
+
+% After these events, the word of the LORD came to Abram in a vision:
+\N 在这些事件之后，耶和华的言在一个异象中临到亚伯兰：
+
+% “Do not be afraid, Abram. I am your shield, your very great reward.”
+“不要害怕，亚伯兰。我是你的护盾，你非常巨大的赏赐。”
+
+% But Abram replied, “O Lord GOD, what can You give me, since I remain childless, and the heir of my house is Eliezer of Damascus?”
+\N 但亚伯兰回复，“主上帝啊，祢能赐给我什么，既然我依旧无子，那我家族继承人是大马色的以利以谢吗？”
+% Abram continued, “Behold, You have given me no offspring, so a servant in my household will be my heir.”
+\N 亚伯兰继续，“看啊，祢尚未赐给我任何后嗣，所以我家室中的一位仆人将是我的继承人。”
+
+% Then the word of the LORD came to Abram, saying, “This one will not be your heir, but one who comes from your own body will be your heir.”
+\N 于是耶和华的言临到亚伯兰，说，“这一个不是你的继承人，而来自你自身身体的一个会是你的继承人。”
+% And the LORD took him outside and said, “Now look to the heavens and count the stars, if you are able.” Then He told him, “So shall your offspring be.”
+\N 而耶和华带他到外面并说，“现在看向诸天，如果你有能力，就数算众星。”然后祂告诉他，“你的后嗣也将如此。”
+
+% Abram believed the LORD, and it was credited to him as righteousness.
+\N 亚伯兰相信耶和华，而这作为义被归功于他。
+
+% The LORD also told him, “I am the LORD, who brought you out of Ur of the Chaldeans to give you this land to possess.”
+\N 耶和华也告诉他，“我是耶和华，我将你带出迦勒底的吾珥以将此地赐给你占有。”
+
+% God Confirms His Promise
+\subsection*{上帝确认祂的应许}
+
+% But Abram replied, “Lord GOD, how can I know that I will possess it?”
+\N 但亚伯兰回复，“主上帝，我如何能知道我会占有它？”
+
+% And the LORD said to him, “Bring Me a heifer, a goat, and a ram, each three years old, along with a turtledove and a young pigeon.”
+\N 而耶和华对他说，“给我带一只母牛、一只母山羊，和一只公绵羊，各只都三岁大，连同一只斑鸠和一只雏鸽。”
+
+% So Abram brought all these to Him, split each of them down the middle, and laid the halves opposite each other. The birds, however, he did not cut in half.
+\N 所以亚伯兰将所有这些带给祂，将它们各个都从中间劈开，并将两半相互对着摆放。然而，他没有将雀鸟切成两半。
+% And the birds of prey descended on the carcasses, but Abram drove them away. 
+\N 而捕食的雀鸟降落在尸体上，但亚伯兰赶走了他们。
+% As the sun was setting, Abram fell into a deep sleep, and suddenly great terror and darkness overwhelmed him.
+\N 当太阳要下山时，亚伯兰陷入沉睡，而突然巨大的恐惧和黑暗淹没了他。
+
+% Then the LORD said to Abram, “Know for certain that your descendants will be strangers in a land that is not their own, and they will be enslaved and mistreated four hundred years.
+\N 然后耶和华对亚伯兰说，“要确定知道你的后代会在一个不是他们自身的土地上成为寄居者，而他们会被奴役并被虐待四百年。
+% But I will judge the nation they serve as slaves, and afterward they will depart with many possessions.
+\N 但我会审判他们作奴隶服侍的民族，而之后他们会带着许多财产离去。
+% You, however, will go to your fathers in peace and be buried at a ripe old age.
+\N 然而，你会和平地去到你先祖那里并在高寿时被埋葬。
+% In the fourth generation your descendants will return here, for the iniquity of the Amorites is not yet complete.”
+\N 在第四代你的后代会返回这里，因为亚摩利人的罪邪还未满盈。”
+
+% When the sun had set and darkness had fallen, behold, a smoking firepot and a flaming torch appeared and passed between the halves of the carcasses.
+\N 当太阳已落山而黑暗已降下时，看啊，一个冒烟的火盆和一个冒火的火把出现并在对半的尸体之间经过。
+% On that day the LORD made a covenant with Abram, saying, “To your descendants I have given this land—from the river of Egypt to the great River Euphrates—
+\N 在那日耶和华与亚伯兰立了一个圣约，说，“我已将这地赐给你的后代---从埃及河到幼发拉底大河---
+% the land of the Kenites, Kenizzites, Kadmonites,
+\N 基尼人、基尼洗人、甲摩尼人、
+% Hittites, Perizzites, Rephaites,
+\N 赫人、比利洗人、利乏音人、
+% Amorites, Canaanites, Girgashites, and Jebusites.”
+\N 亚摩利人、迦南人、革迦撒人和耶布斯人的土地。”
 
 \thispagestyle{empty}
 \newpage
