--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1291,7 +1291,7 @@
 % Then the word of the LORD came to Abram, saying, “This one will not be your heir, but one who comes from your own body will be your heir.”
 \N 于是耶和华的言临到亚伯兰，说，“这一个不是你的继承人，而来自你自身身体的一个会是你的继承人。”
 % And the LORD took him outside and said, “Now look to the heavens and count the stars, if you are able.” Then He told him, “So shall your offspring be.”
-\N 而耶和华带他到外面并说，“现在看向诸天，如果你有能力，就数算众星。”然后祂告诉他，“你的后嗣也将如此。”
+\N 而耶和华带他到外面并说，“现在看向诸天，如果你有能力，就数算众星。”然后祂告诉他，“你的后嗣也必如此。”
 
 % Abram believed the LORD, and it was credited to him as righteousness.
 \N 亚伯兰相信耶和华，而这作为义被归功于他。
@@ -1334,6 +1334,54 @@
 \N 赫人、比利洗人、利乏音人、
 % Amorites, Canaanites, Girgashites, and Jebusites.”
 \N 亚摩利人、迦南人、革迦撒人和耶布斯人的土地。”
+
+% Genesis 16
+\section{第十六章}
+
+% Hagar and Ishmael
+\subsection*{夏甲与以实玛利}
+
+% Now Abram’s wife Sarai had borne him no children, but she had an Egyptian maidservant named Hagar.
+\N 现在亚伯兰的妻子撒莱未为他生孩子，但她有一个埃及女仆名叫夏甲。
+% So Sarai said to Abram, “Look now, the LORD has prevented me from bearing children. Please go to my maidservant; perhaps I can build a family by her.”
+\N 所以撒莱对亚伯兰说，“现在看，耶和华已阻止我生孩子。请去到我女仆那；也许我能由她建立一个家庭。”
+
+% And Abram listened to the voice of Sarai.
+而亚伯兰听从了撒莱的话。
+% So after he had lived in Canaan for ten years, his wife Sarai took her Egyptian maidservant Hagar and gave her to Abram to be his wife.
+\N 所以在他已在迦南生活十年之后，他的妻子撒莱带了她的埃及女仆夏甲并将她给了亚伯兰作他的妾。
+% And he slept with Hagar, and she conceived. But when Hagar realized that she was pregnant, she began to despise her mistress.
+\N 而他与夏甲同寝，她就受孕了。但当夏甲意识到她怀孕时，她开始鄙视她的女主。
+
+% Then Sarai said to Abram, “May the wrong done to me be upon you! I delivered my servant into your arms, and ever since she saw that she was pregnant, she has treated me with contempt. May the LORD judge between you and me.”
+\N 于是撒莱对亚伯兰说，“愿对我做的错加在你身上！我将我的仆人交到你的怀中，而自打她看见她怀孕以来，她就已以藐视对待我。愿耶和华在你我之间评判。”
+
+% “Here,” said Abram, “your servant is in your hands. Do whatever you want with her.” Then Sarai treated Hagar so harshly that she fled from her.
+\N “在这，”亚伯兰说，“你的仆人在你的手中。随你对她做什么。”然后撒莱如此严酷地对待夏甲以至于她从她逃走。
+
+% Now the angel of the LORD found Hagar by a spring of water in the desert—the spring along the road to Shur.
+\N 现在耶和华的使者在沙漠的水泉边发现了夏甲---那泉水沿着路通往书珥。
+% “Hagar, servant of Sarai,” he said, “where have you come from, and where are you going?”
+\N “夏甲，撒莱的仆人，”他说，“你从哪里来，而要往哪里去？”
+
+% “I am running away from my mistress Sarai,” she replied.
+“我正逃离我的女主撒莱，”她回复。
+
+% So the angel of the LORD told her, “Return to your mistress and submit to her authority.” 
+\N 所以耶和华的使者告诉她，“返回到你女主那里并服从她的权威。”
+% Then the angel added, “I will greatly multiply your offspring so that they will be too numerous to count.”
+\N 然后使者补充说，“我会大大倍增你的后嗣以致他们会不可胜数。”
+
+% The angel of the LORD proceeded: “Behold, you have conceived and will bear a son. And you shall name him Ishmael, for the LORD has heard your cry of affliction.
+\N 耶和华的使者接着说：“看啊，你已受孕并会生一个儿子。而你必给他取名以实玛利，因为耶和华已听见你痛苦的哭喊。
+
+% He will be a wild donkey of a man, and his hand will be against everyone, and everyone’s hand against him;
+\N 他会成为一个野驴般的人，而他的手会对抗每个人，而每个人的手会对抗他；
+
+% he will live in hostility toward all his brothers.”
+他会活在对他所有兄弟的敌意中。”
+
+
 
 \thispagestyle{empty}
 \newpage
