--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1381,6 +1381,16 @@
 % he will live in hostility toward all his brothers.”
 他会活在对他所有兄弟的敌意中。”
 
+% So Hagar gave this name to the LORD who had spoken to her: “You are the God who sees me,” for she said, “Here I have seen the One who sees me!”
+\N 所以夏甲将这个名字给已对她讲话的耶和华：“祢是看见我的上帝，”因为她说，“在这里我已看见那看见我的独一位！”
+% Therefore the well was called Beer-lahai-roi. It is located between Kadesh and Bered.
+\N 因此那井被称为庇耳拉海莱。它位于加低斯和巴列之间。
+
+% And Hagar bore Abram a son, and Abram gave the name Ishmael to the son she had borne.
+\N 而夏甲为亚伯兰生了一个儿子，而亚伯兰将名字以实玛利给了她生的这个儿子。
+% Abram was eighty-six years old when Hagar bore Ishmael to him.
+\N 当夏甲为他生以实玛利时，亚伯兰八十六岁。
+
 
 
 \thispagestyle{empty}
