--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1391,6 +1391,52 @@
 % Abram was eighty-six years old when Hagar bore Ishmael to him.
 \N 当夏甲为他生以实玛利时，亚伯兰八十六岁。
 
+% Genesis 17
+\section{第十七章}
+
+% Abraham to Father Many Nations
+\subsection*{亚伯拉罕为多邦之父}
+
+% When Abram was ninety-nine years old, the LORD appeared to him and said, “I am God Almighty. Walk before Me and be blameless.
+\N 当亚伯兰九十九岁时，耶和华向他显现并说，“我是上帝全能者。行在我面前并无可指摘。
+% I will establish My covenant between Me and you, and I will multiply you exceedingly.”
+\N 我会在我和你之间确立我的圣约，而我会使你极度倍增。”
+
+% Then Abram fell facedown, and God said to him,
+\N 于是亚伯兰俯伏在地，而上帝对他说，
+% “As for Me, this is My covenant with you: You will be the father of many nations.
+\N “至于我，这是同祢的我圣约：你会成为多邦之父。
+% No longer will you be called Abram, but your name will be Abraham, for I have made you a father of many nations.
+\N 你不会再被称为亚伯兰，而你的名字会是亚伯拉罕，因为我已使你做一位多邦之父。
+
+% I will make you exceedingly fruitful; I will make nations of you, and kings will descend from you.
+\N 我会使你极度富有果实；我会由你制造众邦，而众王会从你衍生。
+
+% I will establish My covenant as an everlasting covenant between Me and you and your descendants after you, to be your God and the God of your descendants after you.
+\N 我会确立我的圣约，作为我与你以及你之后你的后代之间的永久之约，成为你的上帝和你之后你的后代的上帝。
+
+% And to you and your descendants I will give the land where you are residing—all the land of Canaan—as an eternal possession; and I will be their God.”
+\N 而对你和你的后代，我会将这你正定居的土地赐予他们---迦南的所有土地---作为永恒的财产；而我会是他们的上帝。”
+
+% The Covenant of Circumcision
+\subsection*{割礼之约}
+
+% God also said to Abraham, “You must keep My covenant—you and your descendants in the generations after you.
+\N 上帝还对亚伯拉罕说，“你必须信守我的圣约---你和你的后代在你之后众世代中。
+% This is My covenant with you and your descendants after you, which you are to keep: Every male among you must be circumcised.
+\N 这是我与你和你之后你的后代的圣约，是你们要信守的：你们中间每个男性都要受割礼。
+% You are to circumcise the flesh of your foreskin, and this will be a sign of the covenant between Me and you.
+\N 你要割去你包皮的肉，而这会是我和你之间圣约的一个记号。
+
+% Generation after generation, every male must be circumcised when he is eight days old, including those born in your household and those purchased from a foreigner—even those who are not your offspring.
+\N 世世代代，每个男性当他八岁时必须受割礼，包括那些在你家室出生和那些从异邦人购买的---甚至不是你后嗣的那些。
+% Whether they are born in your household or purchased, they must be circumcised. My covenant in your flesh will be an everlasting covenant.
+\N 不管他们在你家室出生或是购买的，他们必须受割礼。我的圣约在你肉体中会是一个永久之约。
+
+% But if any male is not circumcised, he will be cut off from his people; he has broken My covenant.”
+\N 但如果任何男性不受割礼，他会从他的族民中被剪除；他已破坏我的圣约。”
+
+
 
 
 \thispagestyle{empty}
