--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1422,7 +1422,7 @@
 \subsection*{割礼之约}
 
 % God also said to Abraham, “You must keep My covenant—you and your descendants in the generations after you.
-\N 上帝还对亚伯拉罕说，“你必须信守我的圣约---你和你的后代在你之后众世代中。
+\N 上帝又对亚伯拉罕说，“你必须信守我的圣约---你和你的后代在你之后众世代中。
 % This is My covenant with you and your descendants after you, which you are to keep: Every male among you must be circumcised.
 \N 这是我与你和你之后你的后代的圣约，是你们要信守的：你们中间每个男性都要受割礼。
 % You are to circumcise the flesh of your foreskin, and this will be a sign of the covenant between Me and you.
