--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1413,7 +1413,7 @@
 \N 我会使你极度富有果实；我会由你制造众邦，而众王会从你衍生。
 
 % I will establish My covenant as an everlasting covenant between Me and you and your descendants after you, to be your God and the God of your descendants after you.
-\N 我会确立我的圣约，作为我与你以及你之后你的后代之间的永久之约，成为你的上帝和你之后你的后代的上帝。
+\N 我会确立我的圣约，作为我与你以及你之后你的后代之间的一个永久之约，成为你的上帝和你之后你的后代的上帝。
 
 % And to you and your descendants I will give the land where you are residing—all the land of Canaan—as an eternal possession; and I will be their God.”
 \N 而对你和你的后代，我会将这你正定居的土地赐予他们---迦南的所有土地---作为永恒的财产；而我会是他们的上帝。”
@@ -1435,6 +1435,38 @@
 
 % But if any male is not circumcised, he will be cut off from his people; he has broken My covenant.”
 \N 但如果任何男性不受割礼，他会从他的族民中被剪除；他已破坏我的圣约。”
+
+% Then God said to Abraham, “As for Sarai your wife, do not call her Sarai, for her name is to be Sarah.
+\N 然后上帝对亚伯拉罕说，“至于撒莱你的妻子，不要称她撒莱，因为她的名字要是撒拉。
+% And I will bless her and will surely give you a son by her. I will bless her, and she will be the mother of nations; kings of peoples will descend from her.”
+\N 而我会祝福她并无疑会由她赐给你一个儿子。我会祝福她，而她会成为众邦之母；万族的众王会从她衍生。”
+
+% Abraham fell facedown. Then he laughed and said to himself, “Can a child be born to a man who is a hundred years old? Can Sarah give birth at the age of ninety?”
+\N 亚伯拉罕俯伏在地。然后他笑了并对他自己说，“能从一个一百岁的人生出一个孩子？撒拉能在九十的年纪生子？”
+% And Abraham said to God, “O that Ishmael might live under Your blessing!”
+\N 而亚伯拉罕对上帝说，“但愿以实玛利活在祢的祝福下！”
+
+% But God replied, “Your wife Sarah will indeed bear you a son, and you are to name him Isaac. I will establish My covenant with him as an everlasting covenant for his descendants after him.
+\N 但上帝回复，“你的妻子撒拉的确会为你生一个儿子，而你要给他取名以撒。我会与他确立我的圣约，作为他之后他的后代的一个永久之约。
+% As for Ishmael, I have heard you, and I will surely bless him; I will make him fruitful and multiply him greatly. He will become the father of twelve rulers, and I will make him into a great nation. 
+\N 至于以实玛利，我已听见你，而我无疑会祝福他；我会使他富有果实而使他大大倍增。他会成为十二个统治者的父亲，而我会使他成为一个伟大的民族。
+% But I will establish My covenant with Isaac, whom Sarah will bear to you at this time next year.”
+\N 但我会与以撒确立我的圣约，而在明年的这时撒拉会为你生下他。”
+
+% When He had finished speaking with Abraham, God went up from him.
+\N 当祂结束与亚伯拉罕的对话，上帝离开他升上去了。
+
+% On that very day Abraham took his son Ishmael and all those born in his household or purchased with his money—every male among the members of Abraham’s household—and he circumcised them, just as God had told him.
+\N 就在那日亚伯拉罕带他的儿子以实玛利，和所有在他家室中的或用钱购买的那些人---在亚伯拉罕家室成员中间的每个男性---而他都为他们施了割礼，正如上帝已吩咐他的。
+
+% So Abraham was ninety-nine years old when he was circumcised,
+\N 所以当他受割礼时亚伯拉罕九十九岁，
+% and his son Ishmael was thirteen;
+\N 而他的儿子以实玛利十三岁；
+% Abraham and his son Ishmael were circumcised on the same day.
+\N 亚伯拉罕和他的儿子以实玛利在同一日受割礼。
+% And all the men of Abraham’s household—both servants born in his household and those purchased from foreigners—were circumcised with him.
+\N 而亚伯拉罕家室的所有男人---在他家室出生的仆人兼从异邦人购买的那些人---与他一同受割礼。
 
 
 
