--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -551,7 +551,7 @@
 % Now when men began to multiply on the face of the earth and daughters were born to them,
 \N 现在当人类开始在地表倍增，而女儿们从他们出生时，
 % the sons of God saw that the daughters of men were beautiful, and they took as wives whomever they chose.
-\N 上帝的儿子们看见人类的女儿漂亮，他们就娶任何他们挑选的为妻子。
+\N 上帝的儿子们看见人类的女儿漂亮，他们就娶任何他们选取的为妻子。
 
 % So the LORD said, “My Spirit will not contend with man forever, for he is mortal; his days shall be 120 years.”
 \N 所以耶和华说，“我的圣灵不会永远同人争竞，因为他是凡人；他的日子必定只有120年。”
@@ -1468,7 +1468,53 @@
 % And all the men of Abraham’s household—both servants born in his household and those purchased from foreigners—were circumcised with him.
 \N 而亚伯拉罕家室的所有男人---在他家室出生的仆人兼从异邦人购买的那些人---与他一同受割礼。
 
+% Genesis 18
+\section{第十八章}
 
+% The Three Visitors
+\subsection*{三位访客}
+
+% Then the LORD appeared to Abraham by the Oaks of Mamre in the heat of the day, while he was sitting at the entrance of his tent.
+\N 然后在炎热的白天耶和华在幔利的橡树旁向亚伯拉罕显现，而他正坐在他帐篷的入口处。
+% And Abraham looked up and saw three men standing nearby. When he saw them, he ran from the entrance of his tent to meet them and bowed low to the ground.
+\N 而亚伯拉罕仰望并看见三个人站在附近。当他看见他们，他从他帐篷的入口跑来会见他们并向地面俯首。
+
+% “My lord,” said Abraham, “if I have found favor in your sight, please do not pass your servant by.
+\N “我主，”亚伯拉罕说，“若我已在你视域中得青睐，请不要路过你的仆人。
+% Let a little water be brought, that you may wash your feet and rest yourselves under the tree.
+\N 让我带一点水，以使你能清洗你得脚并在树下歇息一下。
+% And I will bring a bit of bread so that you may refresh yourselves. This is why you have passed your servant’s way. After that, you may continue on your way.”
+\N 而我会带一点饼以使你能恢复一下精力。这是为何你经过你仆人的道路。在那之后，你能继续上路。”
+
+% “Yes,” they replied, “you may do as you have said.”
+“是的，”他们回复，“你能如你已说的做。”
+
+% So Abraham hurried into the tent and said to Sarah, “Quick! Prepare three seahs of fine flour, knead it, and bake some bread.”
+\N 所以亚伯拉罕赶快进入帐篷并对撒拉说，“快点！预备三细亚精制面粉，揉面，并烤一些饼。”
+
+% Meanwhile, Abraham ran to the herd, selected a tender and choice calf, and gave it to a servant, who hurried to prepare it.
+\N 同时，亚伯拉罕跑向牛群，挑选一头细嫩而上好的牛犊，并将它给仆人，仆人赶快将它预备。
+% Then Abraham brought curds and milk and the calf that had been prepared, and he set them before the men and stood by them under the tree as they ate.
+\N 然后亚伯拉罕带了凝乳、牛奶以及已预备的牛犊，而他将它们摆在这几人面前，当他们吃的时候就在树下站在他们身旁。
+
+% Sarah Laughs at the Promise
+\subsection*{撒拉对应许发笑}
+
+% “Where is your wife Sarah?” they asked.
+\N “你的妻子撒拉在哪？”他们问。
+
+% “There, in the tent,” he replied.
+“在那，在帐篷里，”他回复。
+
+% Then the LORD said, “I will surely return to you at this time next year, and your wife Sarah will have a son!”
+\N 然后耶和华说，“明年在这时我无疑会返回你这，而你的妻子撒拉会有一个儿子！”
+
+% Now Sarah was behind him, listening at the entrance to the tent.
+现在撒拉在他身后，在帐篷入口聆听。
+% And Abraham and Sarah were already old and well along in years; Sarah had passed the age of childbearing.
+\N 而亚伯拉罕和撒拉已经老了且年事已高；撒拉已过了生孩子的年纪。
+% So she laughed to herself, saying, “After I am worn out and my master is old, will I now have this pleasure?”
+\N 所以她对自己发笑，说，“在我老朽而我主人年老之后，我现在还会有这种喜事？”
 
 
 \thispagestyle{empty}
