--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1449,7 +1449,7 @@
 % But God replied, “Your wife Sarah will indeed bear you a son, and you are to name him Isaac. I will establish My covenant with him as an everlasting covenant for his descendants after him.
 \N 但上帝回复，“你的妻子撒拉的确会为你生一个儿子，而你要给他取名以撒。我会与他确立我的圣约，作为他之后他的后代的一个永久之约。
 % As for Ishmael, I have heard you, and I will surely bless him; I will make him fruitful and multiply him greatly. He will become the father of twelve rulers, and I will make him into a great nation. 
-\N 至于以实玛利，我已听见你，而我无疑会祝福他；我会使他富有果实而使他大大倍增。他会成为十二个统治者的父亲，而我会使他成为一个伟大的民族。
+\N 至于以实玛利，我已听见你，而我无疑会祝福他；我会使他富有果实而使他大大倍增。他会成为十二个统治者的父亲，而我会使他成为一个伟大的邦族。
 % But I will establish My covenant with Isaac, whom Sarah will bear to you at this time next year.”
 \N 但我会与以撒确立我的圣约，而在明年的这时撒拉会为你生下他。”
 
@@ -1516,6 +1516,82 @@
 % So she laughed to herself, saying, “After I am worn out and my master is old, will I now have this pleasure?”
 \N 所以她对自己发笑，说，“在我老朽而我主人年老之后，我现在还会有这种喜事？”
 
+% And the LORD asked Abraham, “Why did Sarah laugh and say, ‘Can I really bear a child when I am old?’
+\N 而耶和华问亚伯拉罕，“为何撒拉发笑并说，‘我真能在我年老时生一个孩子？’
+% Is anything too difficult for the LORD? At the appointed time I will return to you—in about a year—and Sarah will have a son.”
+\N 对耶和华任何事是太难的吗？在指定的时间我会返回你这---大概一年内---而撒拉会有一个儿子。”
+
+% But Sarah was afraid, so she denied it and said, “I did not laugh.”
+\N 但撒拉害怕了，所以她否认它并说，“我没有发笑。”
+
+% “No,” replied the LORD, “but you did laugh.”
+“不，”耶和华回复，“但你确实笑了。”
+
+% Abraham Intercedes for Sodom
+\subsection*{亚伯拉罕为索多玛求情}
+
+% When the men got up to leave, they looked out over Sodom, and Abraham walked along with them to see them off.
+\N 当这几人起身离开时，他们向索多玛观望，而亚伯拉罕与他们一道同行以给他们送行。
+
+% And the LORD said, “Shall I hide from Abraham what I am about to do?
+\N 而耶和华说，“我该向亚伯拉罕隐藏我即将要做的事吗？
+% Abraham will surely become a great and powerful nation, and through him all the nations of the earth will be blessed.
+\N 亚伯拉罕无疑会成为一个伟大而有权的邦族，而藉着他地上万邦都会蒙福。
+% For I have chosen him, so that he will command his children and his household after him to keep the way of the LORD by doing what is right and just, in order that the LORD may bring upon Abraham what He has promised.”
+\N 因为我已拣选他，以使他会命令他之后他的儿女和他的家室通过行正确而公正的事来信守耶和华的道路，为了耶和华能将祂已应许的带给亚伯拉罕。”
+
+% Then the LORD said, “The outcry against Sodom and Gomorrah is great. Because their sin is so grievous,
+\N 于是耶和华说，“对索多玛和蛾摩拉的怒怨巨大。因为他们的罪恶是如此深重，
+% I will go down to see if their actions fully justify the outcry that has reached Me. If not, I will find out.”
+\N 我会下去看看他们的行为是否完全与已到达我这的怒怨相称。如果不是，我会查清。”
+
+% And the two men turned away and went toward Sodom, but Abraham remained standing before the LORD.
+\N 而那俩人转身离开而向索多玛走去，但亚伯拉罕依然站立在耶和华面前。
+
+% Abraham stepped forward and said, “Will You really sweep away the righteous with the wicked?
+\N 亚伯拉罕向前一步并说，“祢真的会将义人与恶人一同扫除吗？
+% What if there are fifty righteous ones in the city? Will You really sweep it away and not spare the place for the sake of the fifty righteous ones who are there?
+\N 倘若在那城里有五十个义者呢？祢会真的将它扫除而不为在那里的五十个义者的缘故而保全那地方吗？
+% Far be it from You to do such a thing—to kill the righteous with the wicked, so that the righteous and the wicked are treated alike. Far be it from You! Will not the Judge of all the earth do what is right?”
+\N 祢绝不会做这种事---将义人与恶人一同杀掉，以使义人和恶人被相仿对待。祢绝不会！难道全地的审判者不做正确的事？”
+
+% So the LORD replied, “If I find fifty righteous ones within the city of Sodom, on their account I will spare the whole place.”
+\N 所以耶和华说，“如果我在索多玛城中找到五十个义者，为了他们我会保全那整个地方。”
+
+% Then Abraham answered, “Now that I have ventured to speak to the Lord—though I am but dust and ashes—
+\N 然后亚伯拉罕回答，“既然我已冒昧向主讲话---虽然我只是尘土和灰烬---
+% suppose the fifty righteous ones lack five. Will You destroy the whole city for the lack of five?”
+\N 假设五十个义者缺少五个。祢会因为缺少五个而毁灭整个城市吗？”
+
+% He replied, “If I find forty-five there, I will not destroy it.”
+祂回复，“如果我在那里发现四十五个，我就不会摧毁它。”
+
+% Once again Abraham spoke to the LORD, “Suppose forty are found there?”
+\N 再次亚伯拉罕对耶和华讲，“假设在那里找到四十个呢？”
+
+% He answered, “On account of the forty, I will not do it.”
+祂回答，“为了那四十个，我不会做这事。”
+
+% Then Abraham said, “May the Lord not be angry, but let me speak further. Suppose thirty are found there?”
+\N 然后亚伯拉罕说，“愿主不要生气，而让我进一步讲。假设在那里找到三十个呢？”
+
+% He replied, “If I find thirty there, I will not do it.”
+祂回复，“如果我在那里发现三十个，我不会做这事。”
+
+% And Abraham said, “Now that I have ventured to speak to the Lord, suppose twenty are found there?”
+\N 而亚伯拉罕说，“既然我已冒昧向主讲话，假设在那里找到二十个呢？”
+
+% He answered, “On account of the twenty, I will not destroy it.”
+祂回答，“为了那二十个，我不会摧毁它。”
+
+% Finally, Abraham said, “May the Lord not be angry, but let me speak once more. Suppose ten are found there?”
+\N 最终，亚伯拉罕说，“愿主不要生气，而让我再讲一次。假设在那里找到十个呢？”
+
+% And He answered, “On account of the ten, I will not destroy it.”
+而祂回答，“为了那十个，我不会摧毁它。”
+
+% When the LORD had finished speaking with Abraham, He departed, and Abraham returned home.
+\N 当耶和华结束与亚伯拉罕的对话，祂就离去，而亚伯拉罕返回了家中。
 
 \thispagestyle{empty}
 \newpage
