--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -313,7 +313,7 @@
 \N 而我会在你和那女人之间，并在你的苗裔和她的苗裔之间结仇。
 
 % He will crush your head, and you will strike his heel.”
-他会击碎你的头，而你会打伤他的脚跟。”
+他会击碎你的头，而你会击打他的脚跟。”
 
 % The Punishment of Mankind
 \subsection*{人类的惩罚}
@@ -1482,7 +1482,7 @@
 % “My lord,” said Abraham, “if I have found favor in your sight, please do not pass your servant by.
 \N “我主，”亚伯拉罕说，“若我已在你视域中得青睐，请不要路过你的仆人。
 % Let a little water be brought, that you may wash your feet and rest yourselves under the tree.
-\N 让我带一点水，以使你能清洗你得脚并在树下歇息一下。
+\N 让我带一点水，以使你能清洗你们的脚并在树下歇息一下。
 % And I will bring a bit of bread so that you may refresh yourselves. This is why you have passed your servant’s way. After that, you may continue on your way.”
 \N 而我会带一点饼以使你能恢复一下精力。这是为何你经过你仆人的道路。在那之后，你能继续上路。”
 
@@ -1592,6 +1592,47 @@
 
 % When the LORD had finished speaking with Abraham, He departed, and Abraham returned home.
 \N 当耶和华结束与亚伯拉罕的对话，祂就离去，而亚伯拉罕返回了家中。
+
+% Genesis 19
+\section{第十九章}
+
+% Lot Welcomes the Angels
+\subsection*{罗得欢迎天使}
+
+% Now the two angels arrived at Sodom in the evening, and Lot was sitting in the gateway of the city. When Lot saw them, he got up to meet them, bowed facedown,
+\N 现在那两位使者在晚上抵达索多玛，而罗得正坐在城市的门户处。当罗得看见他们，他起身会见他们，俯身在地，
+% and said, “My lords, please turn aside into the house of your servant; wash your feet and spend the night. Then you can rise early and go on your way.”
+\N 并说，“我主，请转向一边进到你们仆人的房子内；清洗你们的脚并过一夜。然后你们能早起并继续赶路。”
+
+% “No,” they answered, “we will spend the night in the square.”
+“不，”他们回答，“我们会在广场上过夜。”
+
+% But Lot insisted so strongly that they followed him into his house. He prepared a feast for them and baked unleavened bread, and they ate.
+\N 但罗得如此强烈地坚持以致他们跟随他进入他的房子。他为他们预备了筵席并烤了无酵饼，他们就吃了。
+
+% Before they had gone to bed, all the men of the city of Sodom, both young and old, surrounded the house.
+\N 在他们已上床休息前，索多玛城的所有人，年轻的兼年老的，包围了那房子。
+% They called out to Lot, saying, “Where are the men who came to you tonight? Send them out to us so we can have relations with them!”
+\N 他们对罗得高呼，说，“今晚到你这里人在哪里？将他们送出给我们，这样我们就能与他们亲热！”
+
+% Lot went outside to meet them, shutting the door behind him.
+\N 罗得走到外面与他们会见，关上他身后的门。
+% “Please, my brothers,” he pleaded, “don’t do such a wicked thing!
+\N “请，我的兄弟们，”他恳请，“不要做如此恶事!
+% Look, I have two daughters who have never slept with a man. Let me bring them to you, and you can do to them as you please. But do not do anything to these men, for they have come under the protection of my roof.”
+\N 看，我有两个女儿，她们从未同男人睡过。让我将她们带给你们，而你们能对她们随心所欲。但不要对这些人做任何事，因为他们已来到我屋檐的保护之下。”
+
+% “Get out of the way!” they replied. And they declared, “This one came here as a foreigner, and he is already acting like a judge! Now we will treat you worse than them.” And they pressed in on Lot and moved in to break down the door.
+\N “让开！”他们回复。而他们宣告，“这个人作为一个异邦人来到这里，而他已像个审判者在行事！现在我们会对待你比对他们还惨。”而他们挤向罗得并冲入要打破房门。
+
+% But the men inside reached out, pulled Lot into the house with them, and shut the door.
+\N 但里面的二人伸手，拉着罗得同他们进到屋内，并关上了门。
+% And they struck the men at the entrance, young and old, with blindness, so that they wearied themselves trying to find the door.
+\N 而他们击打在入口的人们，使年轻的和年老的都盲目，以致他们设法找门却使自己精疲力尽。
+
+% Lot Flees to Zoar
+\subsection*{罗得逃向琐珥}
+
 
 \thispagestyle{empty}
 \newpage
