--- a/source/WCF.tex
+++ b/source/WCF.tex
@@ -3046,7 +3046,7 @@
 		\href{https://biblehub.com/job/8-13.htm}{伯8:13} 如此是所有忘记上帝的人的命运；不敬神者的希望也一样将灭亡。
 		\href{https://biblehub.com/job/8-14.htm}{14} 他们信任的是脆弱的；他们依靠的是一张蜘蛛网。
 		\href{https://biblehub.com/micah/3-11.htm}{弥3:11} 她的领袖们为贿赂而审判，她的祭司们为价钱而教导，而她的先知们为钱财而算命。而他们找寻耶和华的支持并说：“耶和华不是在我们中间吗？没有灾难会碰见我们。”
-		\href{https://biblehub.com/deuteronomy/29-19.htm}{申29:19} 当这样的个体听到这誓言的言词，而他们还给他们自己祈求祝福，想着，“即使我坚持走我自身的路，我也会平安”时，他们会同时给被浇灌的和干旱的土地带来灾难。
+		\href{https://biblehub.com/deuteronomy/29-19.htm}{申29:19} 当这样的个体听到这誓言的言词，而他们还给他们自己祈求祝福，想着，“即使我固执走我自身的路，我也会平安”时，他们会同时给被浇灌的和干旱的土地带来灾难。
 		\href{https://biblehub.com/john/8-41.htm}{约8:41} 你们在做你们自身的父的工作。”“我们不是非婚生的子女，”他们抗议。“我们拥有的唯一的父就是上帝祂自己。”
 	}
 	% (which hope of theirs shall perish):
