--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1633,6 +1633,39 @@
 % Lot Flees to Zoar
 \subsection*{罗得逃向琐珥}
 
+% Then the two men said to Lot, “Do you have anyone else here—a son-in-law, your sons or daughters, or anyone else in the city who belongs to you? Get them out of here,
+\N 然后那俩人对罗得说，“你在这有任何其他人---女婿、你的儿子或女儿，或在这城里任何其他属于你的人吗？要将他们带离这里，
+% because we are about to destroy this place. For the outcry to the LORD against its people is so great that He has sent us to destroy it.”
+\N 因为我们将要摧毁这地方。因为到耶和华那的对它民众的怒怨是如此巨大以致祂已差派我们来摧毁它。”
+
+% So Lot went out and spoke to the sons-in-law who were pledged in marriage to his daughters. “Get up,” he said. “Get out of this place, for the LORD is about to destroy the city!” But his sons-in-law thought he was joking.
+\N 所以罗得出去并讲给许诺与他的女儿们结婚的女婿们。“起身，”他说。“离开这个地方，因为耶和华将要摧毁这城市！”但他的女婿们以为他在开玩笑。
+
+% At daybreak the angels hurried Lot along, saying, “Get up! Take your wife and your two daughters who are here, or you will be swept away in the punishment of the city.”
+\N 在破晓时使者们催促罗得，说，“起身！带着你的妻子和你在这里的两个女儿，否则你会被在这城的惩罚中被扫除。”
+% But when Lot hesitated, the men grabbed his hand and the hands of his wife and his two daughters. And they led them safely out of the city, because of the LORD’s compassion for them.
+\N 但当罗得犹豫时，那二人强抓他的手和他妻子和他两个女儿的手。而他们安全地将他们带领出城，因为耶和华对他们的怜悯。
+
+% As soon as the men had brought them out, one of them said, “Run for your lives! Do not look back, and do not stop anywhere on the plain! Flee to the mountains, or you will be swept away!”
+\N 二人一将他们带出，他们之一就说，“逃命吧！不要回看，也不要停在平原的任何地方！逃到山里，否则你们会被扫除。”
+
+% But Lot replied, “No, my lords, please!
+\N 但罗得回复，“我主，请不要！
+% Your servant has indeed found favor in your sight, and you have shown me great kindness by sparing my life. But I cannot run to the mountains; the disaster will overtake me, and I will die.
+\N 你的仆人的确已在你视域中得青睐，而你已由保全我的性命向我展示巨大的慈爱。但我无法跑到山里；这灾难会赶上我，而我会死。
+% Look, there is a town nearby where I can flee, and it is a small place. Please let me flee there—is it not a small place? Then my life will be saved.”
+\N 看，附近有一个小镇我能逃，而它是一个小地方。请让我逃到那里---它不是一个小地方吗？然后我的性命就会被拯救。”
+
+% “Very well,” he answered, “I will grant this request as well, and will not demolish the town you indicate.
+\N “非常好，”他回答，“我也会准予这个请求，而不会覆灭你所指的小镇。
+% Hurry! Run there quickly, for I cannot do anything until you reach it.” That is why the town was called Zoar.
+\N 赶快！快速跑到那里，因为在你抵达它之前我无法做任何事。”这是为何这小镇被称为琐珥。
+
+% And by the time the sun had risen over the land, Lot had reached Zoar.
+\N 而在太阳升起在这土地之上时，罗得已抵达琐珥。
+
+% The Destruction of Sodom and Gomorrah
+\subsection*{索多玛和蛾摩拉的毁灭}
 
 \thispagestyle{empty}
 \newpage
