--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1620,7 +1620,7 @@
 % “Please, my brothers,” he pleaded, “don’t do such a wicked thing!
 \N “请，我的兄弟们，”他恳请，“不要做如此恶事!
 % Look, I have two daughters who have never slept with a man. Let me bring them to you, and you can do to them as you please. But do not do anything to these men, for they have come under the protection of my roof.”
-\N 看，我有两个女儿，她们从未同男人睡过。让我将她们带给你们，而你们能对她们随心所欲。但不要对这些人做任何事，因为他们已来到我屋檐的保护之下。”
+\N 看，我有两个女儿，她们从未与男人同寝。让我将她们带给你们，而你们能对她们随心所欲。但不要对这些人做任何事，因为他们已来到我屋檐的保护之下。”
 
 % “Get out of the way!” they replied. And they declared, “This one came here as a foreigner, and he is already acting like a judge! Now we will treat you worse than them.” And they pressed in on Lot and moved in to break down the door.
 \N “让开！”他们回复。而他们宣告，“这个人作为一个异邦人来到这里，而他已像个审判者在行事！现在我们会对待你比对他们还惨。”而他们挤向罗得并冲入要打破房门。
@@ -1666,6 +1666,52 @@
 
 % The Destruction of Sodom and Gomorrah
 \subsection*{索多玛和蛾摩拉的毁灭}
+
+% Then the LORD rained down sulfur and fire on Sodom and Gomorrah—from the LORD out of the heavens.
+\N 然后耶和华使硫磺和火雨落在索多玛和蛾摩拉上---来自诸天源自耶和华。
+% Thus He destroyed these cities and the entire plain, including all the inhabitants of the cities and everything that grew on the ground.
+\N 因此祂摧毁了这些城市和全平原，包括城市的所有居民和生长在地面的一切。
+
+% But Lot’s wife looked back, and she became a pillar of salt.
+\N 但是罗得的妻子回看，而她变成了一根盐柱。
+
+% Early the next morning, Abraham got up and returned to the place where he had stood before the LORD.
+\N 第二天清早，亚伯拉罕起身并返回他曾站在耶和华面前的地方。
+% He looked down toward Sodom and Gomorrah and all the land of the plain, and he saw the smoke rising from the land like smoke from a furnace.
+\N 他俯瞰索多玛和蛾摩拉和平原的所有土地，而他看见那土地冒出的烟，像从熔炉冒出的烟一样。
+
+% So when God destroyed the cities of the plain, He remembered Abraham, and He brought Lot out of the catastrophe that destroyed the cities where he had lived.
+\N 所以当上帝摧毁平原的城市时，祂记得亚伯拉罕，而祂将罗得从那摧毁他曾生活的城市的浩劫中带出。
+
+% Lot and His Daughters
+\subsection*{罗得和他的女儿们}
+
+% Lot and his two daughters left Zoar and settled in the mountains—for he was afraid to stay in Zoar—where they lived in a cave.
+\N 罗得和他两个女儿离开琐珥并安家在山中---因为他害怕呆在琐珥---那里他们住在一个洞穴中。
+
+% One day the older daughter said to the younger, “Our father is old, and there is no man in the land to sleep with us, as is the custom over all the earth.
+\N 一天大女儿对小女儿说，“我们的父亲年老，而在这土地上没有男人来和我们同寝，而这是全地之上的习俗。
+    \footnote{
+        和男人结婚生子是世俗的规矩。
+    }
+% Come, let us get our father drunk with wine so we can sleep with him and preserve his line.”
+\N 来，让我们将我们的父亲用酒灌注，那么我们就能与他同寝并保守他的支脉。”
+
+% So that night they got their father drunk with wine, and the firstborn went in and slept with her father; he was not aware when she lay down or when she got up.
+\N 所以那晚她们用酒将她们的父亲灌醉，而长女进去并与她父亲同寝；当她躺下或当她起身时他都毫无意识。
+
+% The next day the older daughter said to the younger, “Look, I slept with my father last night. Let us get him drunk with wine again tonight so you can go in and sleep with him and we can preserve our father’s line.”
+\N 第二天大女儿对小女儿说，“看，我昨晚与我父亲同寝。让我们今晚再次将他灌醉，那么你就能进去并与他同寝，而我们就能保守我们父亲的支脉。”
+
+% So again that night they got their father drunk with wine, and the younger daughter went in and slept with him; he was not aware when she lay down or when she got up.
+\N 所以那晚她们再次用酒将她们的父亲灌醉，而小女儿进去并与她父亲同寝；当她躺下或当她起身时他都毫无意识。
+
+% Thus both of Lot’s daughters became pregnant by their father.
+\N 因而罗得的俩女儿都由她们的父亲怀了孕。
+% The older daughter gave birth to a son and named him Moab. He is the father of the Moabites of today. 
+\N 大女儿生下一个儿子并给他取名摩押。他是今天摩押人的父亲。
+% The younger daughter also gave birth to a son, and she named him Ben-ammi. He is the father of the Ammonites of today.
+\N 小女儿也生下一个儿子，而她给他取名便亚米。他是今天亚扪人的父亲。
 
 \thispagestyle{empty}
 \newpage
